deploy/k8s/03-pixel-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pixel-api-service
  namespace: pixelfield
spec:
  selector:
    app: pixel-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
